[Chore] 서버 통신 초기 세팅 #14

--- a/Teamply/Podfile
+++ b/Teamply/Podfile
@@ -10,6 +10,7 @@ target 'Teamply' do
   pod 'FSCalendar'
   pod 'MaterialComponents/BottomSheet'
   pod 'PanModal'
+  pod 'Moya'
 
   # Pods for Teamply
   # Workaround for Cocoapods issue #7606
